# C_NeuralNetwork_Framework

./: CMakeLists.txt  README.md
Modules/Layer_Builder/: Layer_Builder.h  build_Linear.c  build_activation.c  initialization.c  print_info.c
Modules/Matrix_calculation/: matrix.h  matrix_base.c  matrix_concatenation.c  matrix_linear.c  matrix_multiply.c  matrix_transpose.c  test_concat.c  test_matmul.c  test_transpose.c
Modules/Optimizer/: Optimizer.h  optimizer_Adam.c  optimizer_BasicGD.c
Modules/Sequential/: Sequential.h  build_model.c  forward.c
Modules/derivation/: Jacobian.c  derivative.c
run/: test.c
